Balance: query by height or unix timestamp
